--- a/jobs.html
+++ b/jobs.html
@@ -4,107 +4,163 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jobs Abroad - Afrilink Agency</title>
-    <meta name="description" content="Find jobs in Canada, UK, Dubai, Qatar, Saudi Arabia. Roles in cleaning, hospitality, security, and more.">
-    <meta name="keywords" content="jobs Canada, UK jobs Kenya, Dubai work">
+    <meta name="description" content="Find jobs in Canada, UK, Dubai, Qatar, Saudi Arabia: Cleaners, Hotel Attendants, Security Guards, and more.">
+    <meta name="keywords" content="jobs Canada, UK jobs Kenya, Dubai work, Afrilink Agency">
     <meta property="og:title" content="Jobs - Afrilink Agency">
+    <meta property="og:description" content="Explore international job opportunities with Afrilink.">
+    <meta property="og:image" content="images/afrilinklogo.jpg">
+    <link rel="icon" type="image/png" href="images/favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <nav class="container">
-            <div class="logo">
-                <img src="images/afrilinklogo.jpg" alt="Afrilink Agency Logo" loading="lazy">
-            </div>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="jobs.html">Jobs</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <section data-aos="fade-up">
+    <nav class="navbar navbar-expand-lg">
         <div class="container">
-            <h2>Available Jobs by Country</h2>
-            <p style="text-align:center; margin-bottom:2rem;">Click 'Find Jobs' to explore opportunities. All listings include visa support.</p>
-            <div class="country-grid">
-                <div class="country-card" data-aos="fade-up">
-                    <img src="images/jobcanada.jpg" alt="Jobs in Canada" loading="lazy">
-                    <h3>Canada</h3>
-                    <a href="#" class="btn find-jobs" data-country="Canada">Find Jobs</a>
+            <a class="navbar-brand" href="index.html"><img src="images/afrilinklogo.jpg" alt="Afrilink Agency Logo" loading="lazy"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
+                    <li class="nav-item"><a class="nav-link" href="jobs.html">Jobs</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="privacy.html">Privacy</a></li>
+                    <li class="nav-item"><a class="nav-link" href="terms.html">Terms</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <section class="section-padding">
+        <div class="container">
+            <h2 class="text-center mb-5" data-aos="fade-up">Job Opportunities by Country</h2>
+            <div class="row">
+                <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="100">
+                    <div class="card country-card">
+                        <img src="images/jobcanada.jpg" class="card-img-top" alt="Jobs in Canada" loading="lazy">
+                        <div class="card-body">
+                            <h5>Canada</h5>
+                            <button class="btn btn-explore w-100 find-jobs" data-bs-toggle="modal" data-bs-target="#jobsModal" onclick="setJobCountry('Canada')">Find Jobs</button>
+                        </div>
+                    </div>
                 </div>
-                <div class="country-card" data-aos="fade-up">
-                    <img src="images/jobeurope.jpg" alt="Jobs in UK" loading="lazy"> <!-- Renamed for UK -->
-                    <h3>UK</h3>
-                    <a href="#" class="btn find-jobs" data-country="UK">Find Jobs</a>
+                <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="200">
+                    <div class="card country-card">
+                        <img src="images/jobeurope.jpg" class="card-img-top" alt="Jobs in UK" loading="lazy">
+                        <div class="card-body">
+                            <h5>UK</h5>
+                            <button class="btn btn-explore w-100 find-jobs" data-bs-toggle="modal" data-bs-target="#jobsModal" onclick="setJobCountry('UK')">Find Jobs</button>
+                        </div>
+                    </div>
                 </div>
-                <div class="country-card" data-aos="fade-up">
-                    <img src="images/jobdubai.jpg" alt="Jobs in Dubai" loading="lazy">
-                    <h3>Dubai</h3>
-                    <a href="#" class="btn find-jobs" data-country="Dubai">Find Jobs</a>
+                <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="300">
+                    <div class="card country-card">
+                        <img src="images/jobdubai.jpg" class="card-img-top" alt="Jobs in Dubai" loading="lazy">
+                        <div class="card-body">
+                            <h5>Dubai</h5>
+                            <button class="btn btn-explore w-100 find-jobs" data-bs-toggle="modal" data-bs-target="#jobsModal" onclick="setJobCountry('Dubai')">Find Jobs</button>
+                        </div>
+                    </div>
                 </div>
-                <div class="country-card" data-aos="fade-up">
-                    <img src="images/jobqatar.jpg" alt="Jobs in Qatar" loading="lazy">
-                    <h3>Qatar</h3>
-                    <a href="#" class="btn find-jobs" data-country="Qatar">Find Jobs</a>
+                <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="400">
+                    <div class="card country-card">
+                        <img src="images/jobqatar.jpg" class="card-img-top" alt="Jobs in Qatar" loading="lazy">
+                        <div class="card-body">
+                            <h5>Qatar</h5>
+                            <button class="btn btn-explore w-100 find-jobs" data-bs-toggle="modal" data-bs-target="#jobsModal" onclick="setJobCountry('Qatar')">Find Jobs</button>
+                        </div>
+                    </div>
                 </div>
-                <div class="country-card" data-aos="fade-up">
-                    <img src="images/jobsaudi.jpg" alt="Jobs in Saudi Arabia" loading="lazy">
-                    <h3>Saudi Arabia</h3>
-                    <a href="#" class="btn find-jobs" data-country="Saudi Arabia">Find Jobs</a>
+                <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="500">
+                    <div class="card country-card">
+                        <img src="images/jobsaudi.jpg" class="card-img-top" alt="Jobs in Saudi Arabia" loading="lazy">
+                        <div class="card-body">
+                            <h5>Saudi Arabia</h5>
+                            <button class="btn btn-explore w-100 find-jobs" data-bs-toggle="modal" data-bs-target="#jobsModal" onclick="setJobCountry('Saudi Arabia')">Find Jobs</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
 
     <!-- Jobs Modal -->
-    <div id="jobsModal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <h3 id="jobTitle">Select a Job</h3>
-            <input type="hidden" id="country" value="">
-            <div class="job-list">
-                <button class="job-btn" data-job="Cleaners">Cleaners</button>
-                <button class="job-btn" data-job="Hotel attendants">Hotel Attendants</button>
-                <button class="job-btn" data-job="Security guards">Security Guards</button>
-                <button class="job-btn" data-job="Drivers and riders">Drivers and Riders</button>
-                <button class="job-btn" data-job="House helps">House Helps</button>
-                <button class="job-btn" data-job="Mechanics">Mechanics</button>
-                <button class="job-btn" data-job="Building and construction">Building & Construction</button>
+    <div class="modal fade" id="jobsModal" tabindex="-1" aria-labelledby="jobsModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="jobsModalLabel">Available Jobs in <span id="countryName"></span></h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="d-flex flex-wrap gap-2">
+                        <button class="btn btn-explore" onclick="setJob('Cleaners')" data-bs-dismiss="modal" data-bs-toggle="modal" data-bs-target="#jobFormModal">Cleaners</button>
+                        <button class="btn btn-explore" onclick="setJob('Hotel Attendants')" data-bs-dismiss="modal" data-bs-toggle="modal" data-bs-target="#jobFormModal">Hotel Attendants</button>
+                        <button class="btn btn-explore" onclick="setJob('Security Guards')" data-bs-dismiss="modal" data-bs-toggle="modal" data-bs-target="#jobFormModal">Security Guards</button>
+                        <button class="btn btn-explore" onclick="setJob('Drivers and Riders')" data-bs-dismiss="modal" data-bs-toggle="modal" data-bs-target="#jobFormModal">Drivers and Riders</button>
+                        <button class="btn btn-explore" onclick="setJob('House Helps')" data-bs-dismiss="modal" data-bs-toggle="modal" data-bs-target="#jobFormModal">House Helps</button>
+                        <button class="btn btn-explore" onclick="setJob('Mechanics')" data-bs-dismiss="modal" data-bs-toggle="modal" data-bs-target="#jobFormModal">Mechanics</button>
+                        <button class="btn btn-explore" onclick="setJob('Plumbing')" data-bs-dismiss="modal" data-bs-toggle="modal" data-bs-target="#jobFormModal">Plumbing</button>
+                        <button class="btn btn-explore" onclick="setJob('Masons')" data-bs-dismiss="modal" data-bs-toggle="modal" data-bs-target="#jobFormModal">Masons</button>
+                        <button class="btn btn-explore" onclick="setJob('Electrician')" data-bs-dismiss="modal" data-bs-toggle="modal" data-bs-target="#jobFormModal">Electrician</button>
+                    </div>
+                </div>
             </div>
-            <p><small>Construction includes: Plumbing, Masons, Electricians</small></p>
         </div>
     </div>
 
-    <!-- Form Modal -->
-    <div id="formModal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <h3 id="formTitle">Job Inquiry Form</h3>
-            <input type="hidden" id="job" value="">
-            <input type="hidden" id="country" value=""> <!-- Hidden for Formspree -->
-            <form action="https://formspree.io/f/mjkedvkg" method="POST">
-                <input type="text" name="name" placeholder="Your Name" required>
-                <input type="tel" name="phone" placeholder="Phone Number" required>
-                <input type="email" name="email" placeholder="Email Address" required>
-                <textarea name="message" placeholder="Tell us more about your interest..." rows="4" required></textarea>
-                <button type="submit" class="btn">Send Inquiry</button>
-            </form>
-            <a href="#" class="whatsapp-btn">Or Message on WhatsApp</a>
+    <!-- Job Form Modal -->
+    <div class="modal fade" id="jobFormModal" tabindex="-1" aria-labelledby="jobFormModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="jobFormModalLabel">Inquire About <span id="jobName"></span> in <span id="formCountry"></span></h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form action="https://formspree.io/f/mjkedvkg" method="POST">
+                        <input type="hidden" name="job" id="hiddenJob">
+                        <input type="hidden" name="country" id="hiddenCountry">
+                        <input type="hidden" name="_subject" value="Job Inquiry: ">
+                        <div class="mb-3">
+                            <label for="name" class="form-label">Name</label>
+                            <input type="text" class="form-control" id="name" name="name" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="phone" class="form-label">Phone</label>
+                            <input type="tel" class="form-control" id="phone" name="phone" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="email" class="form-label">Email</label>
+                            <input type="email" class="form-control" id="email" name="email" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="message" class="form-label">Message</label>
+                            <textarea class="form-control" id="message" name="message" rows="3"></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-explore">Send Inquiry</button>
+                    </form>
+                    <div class="mt-3">
+                        <a href="https://wa.me/254707614590" class="btn btn-success" id="whatsappJobBtn">Or Message on WhatsApp</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
-    <footer>
+    <footer class="text-center">
         <div class="container">
             <p>&copy; 2025 Afrilink Agency. All rights reserved. | <a href="privacy.html">Privacy</a> | <a href="terms.html">Terms</a></p>
             <p>Contact: +254707614590 | <a href="https://wa.me/254707614590">WhatsApp</a></p>
         </div>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="script.js"></script>
 </body>
