--- a/services.html
+++ b/services.html
@@ -4,70 +4,153 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services - Afrilink Agency</title>
-    <meta name="description" content="Our services: Job placements, visa assistance, resume building, training, and interview prep for jobs abroad.">
-    <meta name="keywords" content="job services, visa help, resume Kenya">
+    <meta name="description" content="Explore our services: job placements, visa assistance, resume building, training, and interview preparation for jobs abroad.">
+    <meta name="keywords" content="job services, visa help, resume Kenya, Afrilink Agency">
     <meta property="og:title" content="Services - Afrilink Agency">
+    <meta property="og:description" content="Comprehensive support for your international career.">
+    <meta property="og:image" content="images/afrilinklogo.jpg">
+    <link rel="icon" type="image/png" href="images/favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <nav class="container">
-            <div class="logo">
-                <img src="images/afrilinklogo.jpg" alt="Afrilink Agency Logo" loading="lazy">
-            </div>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="jobs.html">Jobs</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <section data-aos="fade-up">
+    <nav class="navbar navbar-expand-lg">
         <div class="container">
-            <h2>Our Services</h2>
-            <div class="services-grid">
-                <div class="service-card" data-aos="fade-up">
-                    <img src="images/jobservice.jpg" alt="Job Placements" loading="lazy">
-                    <h3>Job Placements</h3>
-                    <p>We connect you with verified employers in high-demand sectors abroad.</p>
-                    <a href="jobs.html" class="btn">Learn More</a>
+            <a class="navbar-brand" href="index.html"><img src="images/afrilinklogo.jpg" alt="Afrilink Agency Logo" loading="lazy"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
+                    <li class="nav-item"><a class="nav-link" href="jobs.html">Jobs</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="privacy.html">Privacy</a></li>
+                    <li class="nav-item"><a class="nav-link" href="terms.html">Terms</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <section class="section-padding">
+        <div class="container">
+            <h2 class="text-center mb-5" data-aos="fade-up">Our Services</h2>
+            <div class="row">
+                <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="100">
+                    <div class="card service-card">
+                        <img src="images/jobservice.jpg" class="card-img-top" alt="Job Placements" loading="lazy">
+                        <div class="card-body text-center">
+                            <h5>Job Placements</h5>
+                            <p>Connect with verified employers in top destinations.</p>
+                            <button class="btn btn-explore" data-bs-toggle="modal" data-bs-target="#serviceModal" onclick="setService('Job Placements')">Start Placement</button>
+                        </div>
+                    </div>
                 </div>
-                <div class="service-card" data-aos="fade-up">
-                    <h3>Visa and Passport Assistance</h3>
-                    <p>Expert guidance through applications, documentation, and approvals.</p>
-                    <a href="contact.html" class="btn">Get Started</a>
+                <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="200">
+                    <div class="card service-card">
+                        <img src="images/jobservice.jpg" class="card-img-top" alt="Visa Assistance" loading="lazy">
+                        <div class="card-body text-center">
+                            <h5>Visa and Passport Assistance</h5>
+                            <p>Expert guidance for documentation and approvals.</p>
+                            <button class="btn btn-explore" data-bs-toggle="modal" data-bs-target="#serviceModal" onclick="setService('Visa and Passport Assistance')">Get Visa Help</button>
+                        </div>
+                    </div>
                 </div>
-                <div class="service-card" data-aos="fade-up">
-                    <h3>Resume Building</h3>
-                    <p>Craft standout resumes tailored to international standards.</p>
-                    <a href="contact.html" class="btn">Learn More</a>
+                <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="300">
+                    <div class="card service-card">
+                        <img src="images/jobservice.jpg" class="card-img-top" alt="Resume Building" loading="lazy">
+                        <div class="card-body text-center">
+                            <h5>Resume Building</h5>
+                            <p>Professional CVs for global standards.</p>
+                            <button class="btn btn-explore" data-bs-toggle="modal" data-bs-target="#serviceModal" onclick="setService('Resume Building')">Build My Resume</button>
+                        </div>
+                    </div>
                 </div>
-                <div class="service-card" data-aos="fade-up">
-                    <h3>Training</h3>
-                    <p>Skill-building workshops for roles like hospitality and construction.</p>
-                    <a href="contact.html" class="btn">Enroll Now</a>
+                <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="400">
+                    <div class="card service-card">
+                        <img src="images/jobservice.jpg" class="card-img-top" alt="Training" loading="lazy">
+                        <div class="card-body text-center">
+                            <h5>Training</h5>
+                            <p>Skill enhancement for roles abroad.</p>
+                            <button class="btn btn-explore" data-bs-toggle="modal" data-bs-target="#serviceModal" onclick="setService('Training')">Join Training</button>
+                        </div>
+                    </div>
                 </div>
-                <div class="service-card" data-aos="fade-up">
-                    <h3>Interview Prep</h3>
-                    <p>Mock interviews and tips to ace your global job interviews.</p>
-                    <a href="contact.html" class="btn">Learn More</a>
+                <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="500">
+                    <div class="card service-card">
+                        <img src="images/jobservice.jpg" class="card-img-top" alt="Interview Prep" loading="lazy">
+                        <div class="card-body text-center">
+                            <h5>Interview Prep</h5>
+                            <p>Mock interviews and tips for success.</p>
+                            <button class="btn btn-explore" data-bs-toggle="modal" data-bs-target="#serviceModal" onclick="setService('Interview Prep')">Prep for Interview</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <footer>
+    <!-- Service Form Modal -->
+    <div class="modal fade" id="serviceModal" tabindex="-1" aria-labelledby="serviceModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="serviceModalLabel">Inquire About <span id="serviceName"></span></h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form action="https://formspree.io/f/mjkedvkg" method="POST">
+                        <input type="hidden" name="service" id="hiddenService">
+                        <input type="hidden" name="_subject" value="Service Inquiry: ">
+                        <div class="mb-3">
+                            <label for="name" class="form-label">Name</label>
+                            <input type="text" class="form-control" id="name" name="name" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="phone" class="form-label">Phone</label>
+                            <input type="tel" class="form-control" id="phone" name="phone" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="email" class="form-label">Email</label>
+                            <input type="email" class="form-control" id="email" name="email" required>
+                        </div>
+                        <div class="mb-3" id="preferredCountryField">
+                            <label for="preferredCountry" class="form-label">Preferred Country</label>
+                            <select class="form-control" id="preferredCountry" name="preferredCountry">
+                                <option value="">Select a country</option>
+                                <option value="Canada">Canada</option>
+                                <option value="UK">UK</option>
+                                <option value="Dubai">Dubai</option>
+                                <option value="Qatar">Qatar</option>
+                                <option value="Saudi Arabia">Saudi Arabia</option>
+                            </select>
+                        </div>
+                        <div class="mb-3">
+                            <label for="message" class="form-label">Message</label>
+                            <textarea class="form-control" id="message" name="message" rows="3"></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-explore">Send Inquiry</button>
+                    </form>
+                    <div class="mt-3">
+                        <a href="https://wa.me/254707614590" class="btn btn-success" id="whatsappServiceBtn">Or Message on WhatsApp</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <footer class="text-center">
         <div class="container">
             <p>&copy; 2025 Afrilink Agency. All rights reserved. | <a href="privacy.html">Privacy</a> | <a href="terms.html">Terms</a></p>
             <p>Contact: +254707614590 | <a href="https://wa.me/254707614590">WhatsApp</a></p>
         </div>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="script.js"></script>
 </body>
